fix(AppHeader): adjust alignment of vertical button contents

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -209,6 +209,10 @@
   }
 }
 
+.app-header__menu-trigger {
+  flex-direction: row-reverse;
+}
+
 /**
  * AppHeader title component and its sub-components
  */
